# SDLVideoPlayer

./: CMakeLists.txt  README.md  main.cpp  note.txt
include/const/: error_type.h  input_format_enum.h  log_level.h  play_sync_type.h  seek_type.h  show_mode_enum.h  stream_protocol.h  struct_config.h  subtitle_type.h
include/entity/: audio_param_dto.h  audio_params.h  audio_simple_format.h  error_desc.h  frame.h  packet.h  play_state.h  player_setting.h  screen_info.h  subtitle.h  subtitle_rect.h  thread_coordinator.h  video_basic_info.h
include/player/: play_envs.h  player_setting.h  player_setting_fac.h  sdl_video_player.h  video_player.h
include/player/sdl_video_player/: diff_time.h  player_inner_config.h  sdl_audio_decode_regin.h  sdl_cache_collection.h  sdl_clock_group.h  sdl_displayer.h  sdl_media_filter_info.h  sdl_play_state.h  sdl_presentation_form.h  sdl_thread_coordinator.h  sdl_vid_player_setting.h  sdl_video_basic_info.h  sdl_video_decode_regin.h  sdl_video_player.h
include/struct/: frame_queue.h  packet_queue.h
include/util/: calc.h  ff_mem.h  ff_util.h  sdl_mem.h  sdl_util.h  url_util.h
include/util/logger/: logger.h  player_logger.h
include/util/mem/: ff_mem.h  mem_alloc.h
include/util/sync/: clock.h
note/: ff_api.md
src/const/: error_type.cpp  show_mode_enum.cpp
src/entity/: audio_param_dto.cpp  audio_params.cpp  error_desc.cpp  frame.cpp  packet.cpp  play_setting.cpp  play_state.cpp  subtitle_rect.cpp  video_basic_info.cpp
src/player/: play_envs.cpp  player_setting.cpp  player_setting_fac.cpp  sdl_video_player.cpp  video_player.cpp
src/player/sdl_video_player/: sdl_audio_decode_regin.cpp  sdl_clock_group.cpp  sdl_displayer.cpp  sdl_media_filter_info.cpp  sdl_play_state.cpp  sdl_player_filter_and_resampling.cpp  sdl_presentation_form.cpp  sdl_thread_coordinator.cpp  sdl_vid_play_setting.cpp  sdl_video_basic_info.cpp  sdl_video_decode_regin.cpp  sdl_video_player.cpp  sdl_video_player_init.cpp  sdl_video_player_read.cpp
src/struct/: frame_queue.cpp  packet_queue.cpp
src/test/: test_lib_queue.cpp  test_move_queue.cpp  test_ring_queue.cpp
src/util/: ff_util.cpp  sdl_util.cpp
src/util/logger/: player_logger.cpp
src/util/sync/: clock.cpp
